--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@ body{
     border: 1px solid #fff;
     padding: 7px 10px;
  }
+.language-btn img{
+      width: 10px;
+      margin-left: 10px;
+ }
  
 
  .header-content{
